# nakai

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs  config.toml
api/src/: lib.rs
api/static/css/: style.css
api/templates/: base.html.tera  download.html.tera  index.html.tera
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/static/js/: hostess.js
crates/api/templates/: base.html.tera
crates/api/templates/components/error/: banned.html.tera
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/entity/src/: denylist.rs  file.rs  lib.rs  rate_limit.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs  m20241111_235503_hostess.rs
crates/service/: Cargo.toml
crates/service/src/: mutation.rs  query.rs
entity/: Cargo.toml
entity/src/: lib.rs  passkeys.rs  rate_limit.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241111_235503_hostess.rs
public/: style.css
public/static/css/: style.css
public/templates/: banned.html.tera  download.html.tera  index.html.tera
public/templates/components/: base.html.tera  footer.html.tera
service/: Cargo.toml
service/src/: mutation.rs  query.rs
src/: fh_config.rs  main.rs  tests.rs
src/core/: config.rs  mod.rs  uuid.rs
src/db/: mod.rs
src/model/: file.rs  mod.rs  response.rs
src/route/: file.rs  mod.rs
src/view/: style.css
src/view/templates/: banned.html.tera  index.html.tera
src/view/templates/components/: base.html.tera  footer.html.tera  styles.html.tera
