[package]
name = "hostess"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["--cfg", "no_windows"]

[dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-rocket = "0.5.4"
serde = "1.0.210"
tera = "1.20.0"
toml = "0.8.19"
uuid = "1.10.0"
