[package]
name = "hostess"
description = "Fast, Pomf-compatible file server written with Actix & SeaORM"
version = "0.1.1"
authors = ["Ashton L. <ashton@spysat.net>", "Josie E."]
homepage = "https://hostess.lol"
repository = "https://github.com/ashtonqlb/nakai"
license = "GPL-3.0"
edition = "2021"
publish = false

[workspace]
members = ["api", "service", "entity", "migration"]

[dependencies]
hostess-api = { path = "api" }