[package]
name = "hostess"
description = "Fast, Pomf-compatible file server written with Actix & SeaORM"
version = "0.1.1"
authors = ["Ashton L. <ashton@spysat.net>", "Josie E."]
homepage = "https://hostess.lol"
repository = "https://github.com/ashtonqlb/nakai"
license = "GPL-3.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/api", "crates/service", "crates/entity", "crates/migration", "crates/cli"]

[dependencies]
hostess-api = { path = "crates/api" }
tree_magic_mini = "3.1.6"
