[package]
name = "hostess-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "~1.1.1" # sea-orm version
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-mysql"
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }